<resources>

    <string name="app_name">蓝天燃气</string>
    <string name="app_name_s">燃气终端</string>
    <string name="login_text">登录</string>
    <string name="confirm_add_customer">提交</string>
    
     <string name="confir_paidan">派单</string>
     <string name="confir_zhiban">直办</string>
     
    <string name="give_username">请填写登录帐号</string>
    <string name="give_password">请输入密码</string>
    <string name="logining">登录服务器...</string>
    <string name="waiting">正在加载</string>
    <string name="login_fail">用户名或密码错误</string>
    <string name="login_net_fial">网络不给力，稍后再试试吧</string>
    <string name="login_cancel">取消登陆!</string>
    <string name="login_faile_address">登录访问的地址不可用!</string>
    <string name="login_success">登录成功</string>
    <string name="default_commit_content">已处理</string>
    <string name="tab_msg">待办件</string>
    <string name="tab_msg_list">已办件</string>
    <string name="tab_setting">设置</string>
    <string name="scan">扫一扫</string>
    <string name="search">搜索</string>
    <string name="back">返回</string>
    <string name="job_view">查看工单</string>
    <string name="add_job_check">新增工单</string>
    <string name="add_customer">新开户</string>
    <string name="add_new_job">新增工单</string>
    <string name="commit_job">提交</string>
    <string name="scan_commit_job">扫码提交</string>
    <string name="end_scan_job">完成扫码</string>
    <string name="tab_msg_title">待办件</string>
    <string name="tab_msg_list_title">已办件</string>
    <string name="default_msg_title">新的待办件，请尽快处理</string>
    <string name="default_msg_time">昨天下午</string>
    <string name="default_msg_content">南阳市东区33号...</string>
    <string name="no_msg_waring">没有新待办件，下滑刷新！</string>
    <string name="msg_waring">点击查询按钮获取相关时间段的工单列表！</string>
    <string name="no_job_waring">未查询到工单，请重新选择时间！</string>
    <string name="no_done_job_waring">当前没有已完成的工单！</string>
    <string name="server_setting">服务器设置</string>
    <string name="scan_setting">新工单设置</string>
    <string name="system_setting">系统设置</string>
    <string name="check_update">版本更新</string>
    <string name="about_app">关于</string>
    <string name="truncate_list">清空已办件</string>
    <string name="exit_app">退出登陆</string>
    <string name="confirm_success">操作成功</string>
    <string name="confirm_fail">操作失败</string>
    <string name="confirm_add_fail">新开户提交失败，请保证良好的网络环境，并重试!</string>
    <string name="confirm_add_job_fail">新增工单失败，请保证良好的网络环境，并重试!</string>
    <string name="j_result">处理结果：</string>
    <string name="title_msg">燃气APP正在后台运行!</string>
    <string name="title_new_job">条未处理新待办件!</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>

    <!-- 系统设置中文标题 -->
    <string name="sys_set_job_num">已办件个数：</string>
    <string name="sys_set_confirm">点击保存所有修改</string>
    <string name="sys_set_scan">更新参数(秒):</string>
    <string name="sys_set_update">是否自动更新:</string>
    <string name="sys_set_mark">系统设置已保存!</string>
    <string name="sys_set_msg">请确认输入项是否都已经输入!</string>
    <string name="sys_set_rload">系统重要参数已修改，下次登录生效!</string>
    
    <string name="sys_clean_job_list">已办件已经清理!</string>
    <string name="scan_text">将条形码放入框内, 即可自动扫描</string>
    <string name="scan_fail">获取钢瓶信息失败，可能是网络原因</string>

    <!-- 长的测试文字 -->
    <string name="test_content">系统要求开户的电话号码唯一，请输入完整的电话号码或者电话号码的后四位，如果电话号码尚未开户，新建工单的同时会自动完成开户操作。</string>
    <string name="str_str_test"> 【关于明天下午召开2015年部门团拜会的预通知】各位领导、同事：大家好！部门将于明天下午14:30在云来斯堡15楼培训室召开2015年团拜会，会议主要议程有：红总传达工作会精神、大数据培训、员工代表发言、拜年、颁发小礼物等。因具体的会议议程仍需领导审核，正式会议通知稍后下发，请大家知晓并相互通知。原则上要求部门全员参加会议，非特殊情况不得请假，请周知，谢谢！</string>
    <string name="can_not_user">当前菜单功能未开放!</string>
    
     <string name="update_content">新版本</string>

</resources>