<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/chat_bg_default" >

    <RelativeLayout
        android:id="@+id/rl_layout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/title_bar"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/title_btn_back"
            android:onClick="backHandler"
            android:text="@string/back"
            android:textColor="#fff"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/system_setting"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_body"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_layout"
        android:gravity="left"
        android:padding="10dp"
        android:paddingTop="15dp" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@anim/sharp"
            android:scrollbarStyle="outsideOverlay" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="10dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:padding="8dp" >

                <TableLayout
                    android:id="@+id/s_table"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:shrinkColumns="1"
                    android:stretchColumns="1" >

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sys_set_job_num"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/set_job_num"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:numeric="integer"
                            android:text="50" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sys_set_scan"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/set_scan_time"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:numeric="integer"
                            android:text="10" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sys_set_update"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <Spinner
                            android:id="@+id/set_update"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" />
                    </TableRow>
                </TableLayout>

                <RelativeLayout
                    android:id="@+id/b_sumbit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/s_table"
                    android:layout_marginTop="30dp"
                    android:gravity="center|bottom"
                    android:paddingBottom="20dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp" >

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/login_button_corners"
                        android:fitsSystemWindows="true"
                        android:minHeight="43dip"
                        android:onClick="confirmHandler"
                        android:text="@string/sys_set_confirm"
                        android:textColor="@color/black"
                        android:textSize="17sp" />
                </RelativeLayout>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>