<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/chat_bg_default"
    android:scrollbars="vertical" >

    <RelativeLayout
        android:id="@+id/add_relate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/add_head"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@drawable/title_bar"
            android:gravity="center_vertical" >

            <Button
                android:id="@+id/btn_back"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/title_btn_back"
                android:onClick="backHandler"
                android:text="@string/back"
                android:textColor="#fff"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/add_customer"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/add_body"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_head"
            android:gravity="left"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp" >

            <TableLayout
                android:id="@+id/add_table"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:shrinkColumns="1"
                android:stretchColumns="1" >
                
                
                
            </TableLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/add_footer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_body"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_button_corners"
                android:fitsSystemWindows="true"
                android:minHeight="43dip"
                android:text="@string/confirm_add_customer"
                android:textColor="@color/black"
                android:onClick="postHandler"
                android:textSize="17sp" />
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>