<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/chat_bg_default" >

    <RelativeLayout
        android:id="@+id/rl_layout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/title_bar"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/title_btn_back"
            android:onClick="backHandler"
            android:text="@string/back"
            android:textColor="#fff"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/job_view"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/rl_body"
        android:background="@drawable/chat_footer_bg" >

        <TextView
            android:id="@+id/rl_text"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:text="@string/input_commit_job"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/rl_code"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginTop="3dp"
            android:layout_toRightOf="@id/rl_text" />

        <Spinner
            android:id="@+id/j_reply"
            android:layout_width="170dp"
            android:layout_height="45dp"
            android:layout_below="@id/rl_text" />

        <Button
            android:id="@+id/btn_scan_send"
            android:layout_width="95dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/j_reply"
            android:background="@anim/btn_style_alert_dialog_cancel"
            android:onClick="scanConfirm"
            android:text="@string/scan_commit_job"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="64dp"
            android:layout_height="40dp"
            android:layout_alignBaseline="@+id/btn_scan_send"
            android:layout_alignBottom="@+id/btn_scan_send"
            android:layout_toRightOf="@+id/j_reply"
            android:background="@anim/btn_style_alert_dialog_cancel"
            android:onClick="confirmPost"
            android:text="@string/commit_job"
            android:textColor="#ffffff" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/rl_bottom"
        android:layout_below="@id/rl_layout"
        android:padding="10dp"
        android:paddingTop="15dp"
        android:scrollbarStyle="outsideOverlay" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/n_j_1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@anim/sharp"
                android:orientation="vertical"
                android:padding="8dp" >

                <TextView
                    android:id="@+id/j_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="关于信息化事业部工单流转的公告说明!"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/j_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="6dp"
                        android:text="2012-12-11"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/j_tel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:gravity="right"
                        android:paddingLeft="40dp"
                        android:paddingTop="2dp"
                        android:text="13723877876"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/b_tel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="9dp"
                        android:background="@drawable/tel"
                        android:onClick="TelNum"
                        android:paddingTop="20dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/n_j_1"
                android:layout_marginTop="10dp"
                android:background="@anim/sharp"
                android:orientation="vertical"
                android:padding="8dp" >

                <TextView
                    android:id="@+id/j_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="15dp"
                    android:paddingTop="5dp"
                    android:text="@string/str_str_test"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>