<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/chat_bg_default" >

    <RelativeLayout
        android:id="@+id/rl_layout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/title_bar"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/title_btn_back"
            android:onClick="backHandler"
            android:text="@string/back"
            android:textColor="#fff"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_job_check"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_head"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_layout"
        android:gravity="left"
        android:padding="15dp" >

        <TextView
            android:id="@+id/j_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="温馨提示："
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/j_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/j_title"
            android:background="@anim/sharp"
            android:editable="false"
            android:padding="8dp"
            android:text="@string/test_content"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_body"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_head"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <TextView
            android:id="@+id/tel_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tel_num"
            android:layout_alignTop="@+id/tel_num"
            android:gravity="center_vertical"
            android:text="号码："
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tel_num"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/tel_title"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_body1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_body"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:visibility="gone" >

        <TextView
            android:id="@+id/addr_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/addr_content"
            android:layout_alignTop="@+id/addr_content"
            android:gravity="center_vertical"
            android:text="地址："
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/addr_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/addr_title"
            android:enabled="false"
            android:hint="功能暂未开放!"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/add_footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_body1"
        android:gravity="center"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="10dp" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button_corners"
            android:fitsSystemWindows="true"
            android:minHeight="43dip"
            android:onClick="postAddJob"
            android:text="@string/confirm_add_customer"
            android:textColor="@color/black"
            android:textSize="17sp" />
    </RelativeLayout>

</RelativeLayout>